Ticket template: fix button alignment when the sidebar is small

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -5879,6 +5879,10 @@ footer {
   padding-bottom: 14px;
 }
 
+.templates-manage fieldset {
+  margin: 0;
+}
+
 .template-attributes {
   margin: 17px 0 19px;
 }
